--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,16 @@ h1, h2, h3,
   background-image: linear-gradient(to right, white, #f2f2f2);
 }
 
+.banner-info{
+  background-color:#EFEBE1;
+}
+.banner-full-bleed {
+  width: 100vw; /* Define a largura como 100% da largura da tela */
+  position: relative; /* Necessário para o cálculo de 'left' */
+  left: 50%; /* Move o início do elemento para o centro da tela */
+  transform: translateX(-50%); /* Puxa o elemento de volta pela metade de sua própria largura */
+}
+
 .categorias-produtos {
   width: 110px;
   height: 110px;
@@ -725,16 +735,16 @@ h1, h2, h3,
 
 
 .btn-round-2 {
-        width: 110px;      
-        height: 110px;     
+        width: 100px;      
+        height: 100px;     
         border-radius: 50%;
         font-weight: bold; 
         font-size: 1rem;
         text-align: center;
 }
 .btn-round-3 {
-        width: 90px;      
-        height: 90px;     
+        width: 85px;      
+        height: 85px;     
         border-radius: 50%;
         font-weight: bold; 
         font-size: 0.8rem;
@@ -749,4 +759,41 @@ h1, h2, h3,
   background-color: var(--brand-900);
   border-color: var(--brand-900);
   color: white;
+}
+
+.btn-linhas:hover {
+  background-color: var(--brand-900);
+}
+
+.btn-cortes {
+  border-color: var(--brand-700);
+  border-width: 2px;
+  color: var(--brand-700);
+  padding: 2.5%;            
+}
+.btn-cortes:hover {
+  background-color: var(--brand-800);
+  border-color: var(--brand-800);    
+  color: white;
+}
+
+.progress-container {
+  margin: 25px ;
+  width: 75%;
+  height: 8px;
+  background-color: #e9ecef;
+  top: 0;
+  left: 0;
+  justify-self: center;
+  border-radius: 10px;
+}
+.progress-bar {
+  height: 8px;
+  background-color: var(--brand-800);
+  width: 25%;
+  border-radius: 10px;
+}
+
+.bg-mais-vendidos{
+  background-color:#AE2431;
 }
